style.css
/* GENERAL */

@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");

/* default light mode */
:root {
  --primary-color: white;
  --primary-color-2: rgb(250, 250, 250);
  --primary-color-3: rgb(181, 181, 181);
  --background-color: rgb(255, 255, 255);
  --secondary-color: black;
  --secondary-color-2: rgb(85, 85, 85);
  --button-background: rgb(53, 53, 53);
  --button-text-hover: grey;
  --button-border: rgb(53, 53, 53) 0.1rem solid;
  --button-border-2: rgb(255, 255, 255) 0.1rem solid;
  --container-border: rgb(163, 163, 163);
}

/* default dark mode */
[theme="dark"] {
  --primary-color: black;
  --primary-color-2: rgb(39, 39, 39);
  --primary-color-3: rgb(74, 74, 74);
  --background-color: rgb(33, 33, 33);
  --secondary-color: white;
  --secondary-color-2: rgb(170, 170, 170);
  --button-background: rgb(202, 202, 202);
  --button-text-hover: lightgrey;
  --button-border: rgb(202, 202, 202) 0.1rem solid;
  --button-border-2: rgb(0, 0, 0) 0.1rem solid;
  --container-border: rgb(92, 92, 92);
}

h3 {
  color: var(--secondary-color);
}

* {
  margin: 0;
  padding: 0;
}

body {
  font-family: "Poppins", sans-serif;
  background-color: var(--background-color);
}

html {
  scroll-behavior: smooth;
}

p {
  color: var(--secondary-color-2);
}

/* Transition */

a,
.btn {
  transition: all 300ms ease;
}

/* Desktop nav*/

nav,
.nav-links {
  display: flex;
  align-items: center;
}
nav {
  justify-content: space-around;
  height: 17vh;
}
.nav-links {
  gap: 2rem;
  list-style: none;
  font-size: 1.5rem;
}

nav li:last-child {
  width: max-content;
  display: flex;
  margin: auto;
  padding: 10px;
}

a {
  color: var(--secondary-color);
  text-decoration: none;
  text-decoration-color: var(--primary-color);
}

a:hover {
  text-decoration: underline;
  text-underline-offset: 1rem;
  text-decoration-color: var(--secondary-color);
}
nav a:hover {
  color: var(--secondary-color);
  text-decoration-color: var(--secondary-color);
}

.logo {
  font-size: 2rem;
  color: var(--secondary-color);
}

.logo:hover {
  cursor: default;
}

/* Hambrger menu */

#hamburger-nav {
  display: none;
}

.hamburger-menu {
  position: relative;
  display: inline-block;
}

.hamburger-icon {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 24px;
  width: 30px;
  cursor: pointer;
}

.hamburger-icon span {
  width: 100%;
  height: 2px;
  background-color: var(--secondary-color);
  transition: all 0.3 ease-in-out;
}

.menu-links {
  position: absolute;
  top: 100%;
  right: 0%;
  background-color: var(--background-color);
  width: fit-content;
  max-height: 0px;
  overflow: hidden;
  transition: all 0.3 ease-in-out;
}

.menu-links a {
  display: block;
  padding: 10px;
  text-align: center;
  font-size: 1.5rem;
  color: var(--secondary-color);
  text-decoration: none;
  transition: all 0.3 ease-in-out;
}

.menu-links li {
  list-style: none;
}

.menu-links.open {
  max-height: 300px;
}

.hamburger-icon.open span:first-child {
  transform: rotate(45deg) translate(10px, 5px);
}

.hamburger-icon.open span:nth-child(2) {
  opacity: 0;
}

.hamburger-icon.open span:last-child {
  transform: rotate(-45deg) translate(10px, -5px);
}

.hamburger-icon span:first-child {
  transform: none;
}
.hamburger-icon span:first-child {
  opacity: 1;
}
.hamburger-icon span:first-child {
  transform: none;
}

/* Sections */

section {
  padding-top: 4vh;
  height: 96vh;
  margin: 0 10rem;
  box-sizing: border-box;
  min-height: fit-content;
}

.section-container {
  display: flex;
}

/* Profile Section */

#profile {
  display: flex;
  justify-content: center;
  gap: 5rem;
  height: 80vh;
}

.section__pic-container {
  display: flex;
  height: 400px;
  width: 400px;
  margin: auto 0;
}

.section__text {
  align-self: center;
  text-align: center;
}

.section__text p {
  font-weight: 600;
}

.section__text__p1 {
  text-align: center;
}
.section__text__p2 {
  font-size: 1.75rem;
  margin-bottom: 1rem;
}

.title {
  color: var(--secondary-color);
  font-size: 3rem;
  text-align: center;
}

#socials-container {
  display: flex;
  justify-content: center;
  margin-top: 1rem;
  gap: 1rem;
}

/* ICONS */

.icon {
  cursor: pointer;
  height: 2rem;
}

/* buttons */

.btn-container {
  display: flex;
  justify-content: center;
  gap: 1rem;
}

.btn {
  font-weight: 600;
  transition: all 300ms ease;
  padding: 1rem;
  width: 8rem;
  border-radius: 2rem;
}

.btn-color-1,
.btn-color-2 {
  border: var(--button-border);
  color: var(--secondary-color-2);
}

.btn-color-1:hover,
.btn-color-2:hover {
  cursor: pointer;
}

.btn-color-1,
.btn-color-2:hover {
  background: var(--button-background);
  color: var(--primary-color);
}

.btn-color-1:hover {
  background: var(--secondary-color);
}

.btn-color-2 {
  background: none;
}

.btn-color-2:hover {
  border: var(--button-border) 0.1rem solid;
  background: var(--secondary-color);
}

.btn-container {
  gap: 1rem;
}

/* about */

#about {
  position: relative;
}

.about-containers {
  gap: 2rem;
  margin-bottom: 2rem;
  margin-top: 2rem;
}

.about-details-container {
  justify-content: center;
  flex-direction: column;
}

.about-containers,
.about-details-container {
  display: flex;
}

.about-pic {
  border-radius: 2rem;
}

.arrow {
  position: absolute;
  right: -5rem;
  bottom: 2.5rem;
}

.details-container {
  padding: 1.5rem;
  flex: 1;
  background: var(--primary-color-2);
  border-radius: 2rem;
  border: var(--button-border) 0.1rem solid;
  border-color: var(--container-border);
  text-align: center;
}

.section-container {
  gap: 4rem;
  height: 80%;
}

.section__pic-container {
  height: 400px;
  width: 400px;
  margin: auto 0;
}

/* experience */

#experience {
  position: relative;
}

.experience-sub-title {
  color: var(--secondary-color);
  font-weight: 600;
  font-size: 1.75rem;
  margin-bottom: 2rem;
}

.experience-details-container {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.article-container {
  display: flex;
  text-align: initial;
  flex-wrap: wrap;
  flex-direction: row;
  gap: 2.5rem;
  justify-content: space-around;
}

article {
  display: flex;
  width: 10rem;
  justify-content: space-around;
  gap: 0.5rem;
}

article .icon {
  cursor: default;
}

/* Projects section */

#projects {
  position: relative;
}

.color-container {
  border-color: var(--container-border);
  background: var(--primary-color-2);
}

.project-img {
  border-radius: 2rem;
  width: 90%;
  height: 90%;
}

.project-title {
  margin: 1rem;
  color: var(--secondary-color);
}

.project-btn {
  color: var(--secondary-color);
  border-color: var(--container-border);
}

/* contact */

#contact {
  display: flex;
  justify-content: center;
  flex-direction: column;
  height: 70vh;
}

.contact-info-upper-container {
  display: flex;
  justify-content: center;
  border-radius: 2rem;
  border: var(--button-border);
  border-color: var(--container-border);
  background: var(--background-color);
  margin: 2rem auto;
  padding: 0.5rem;
}

.contact-info-container {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
  margin: 1rem;
}

.contact-info-container p {
  font-size: larger;
}

.contact-icon {
  cursor: default;
}

.email-icon {
  height: 2.5rem;
}

/* footer */

footer {
  height: 26vh;
  margin: 0 1rem;
}

footer p {
  text-align: center;
}

